--- a/fixture/default/core/Mage/Home/uimap/frontend/Home.yml
+++ b/fixture/default/core/Mage/Home/uimap/frontend/Home.yml
@@ -31,6 +31,7 @@ home:
     title: Home page
     uimap: &homePage
         form:
+            fieldsets:
                 -
                     compare_products:
                         xpath: //div[contains(div/strong/span,'Compare Products')]
