--- a/fixture/enterprise/core/Mage/SystemConfiguration/uimap/admin/SystemConfiguration.yml
+++ b/fixture/enterprise/core/Mage/SystemConfiguration/uimap/admin/SystemConfiguration.yml
@@ -37,28 +37,28 @@ system_configuration:
                         links:
                             dhl_link: //parent::div//a[@id='carriers_dhlint-head']
                         fields:
-                            dhl_int_title: //input[@id='carriers_dhlint_title']
-                            dhl_int_gateway_url: //input[@id='carriers_dhlint_gateway_url']
-                            dhl_int_access_id: //input[@id='carriers_dhlint_id']
-                            dhl_int_password: //input[@id='carriers_dhlint_password']
-                            dhl_int_account_number: //input[@id='carriers_dhlint_account']
-                            dhl_int_handling_fee: //input[@id='carriers_dhlint_handling_fee']
-                            dhl_int_maximum_package_weight: //input[@id='carriers_dhlint_max_package_weight']
-                            dhl_int_ready_time: //input[@id='carriers_dhlint_ready_time']
-                            dhl_int_displayed_error_message: //textarea[@id='carriers_dhlint_specificerrmsg']
-                            dhl_int_min_order_amount_for_free_shipping: //input[@id='carriers_dhlint_free_shipping_subtotal']
-                            dhl_int_sort_order: //input[@id='carriers_dhlint_sort_order']
+                            dhl_title: //input[@id='carriers_dhlint_title']
+                            dhl_gateway_url: //input[@id='carriers_dhlint_gateway_url']
+                            dhl_access_id: //input[@id='carriers_dhlint_id']
+                            dhl_password: //input[@id='carriers_dhlint_password']
+                            dhl_account_number: //input[@id='carriers_dhlint_account']
+                            dhl_handling_fee: //input[@id='carriers_dhlint_handling_fee']
+                            dhl_maximum_package_weight: //input[@id='carriers_dhlint_max_package_weight']
+                            dhl_ready_time: //input[@id='carriers_dhlint_ready_time']
+                            dhl_displayed_error_message: //textarea[@id='carriers_dhlint_specificerrmsg']
+                            dhl_min_order_amount_for_free_shipping: //input[@id='carriers_dhlint_free_shipping_subtotal']
+                            dhl_sort_order: //input[@id='carriers_dhlint_sort_order']
                         dropdowns:
-                            dhl_int_enabled: //select[@id='carriers_dhlint_active']
-                            dhl_int_content_type: //select[@id='carriers_dhlint_content_type']
-                            dhl_int_calculate_handling_fee:: //select[@id='carriers_dhlint_handling_type']
-                            dhl_int_handling_applied: //select[@id='carriers_dhlint_handling_action']
-                            dhl_int_free_method: //select[@id='carriers_dhlint_free_method_doc']
-                            dhl_int_free_shipping_with_min_order_amount: //select[@id='carriers_dhlint_free_shipping_enable']
-                            dhl_int_ship_to_applicable_countries: //select[@id='carriers_dhlint_sallowspecific']
-                            dhl_int_show_method_if_not_applicable: //select[@id='carriers_dhlint_showmethod']
-                            dhl_int_debug: //select[@id='carriers_dhlint_debug']
+                            dhl_enabled: //select[@id='carriers_dhlint_active']
+                            dhl_content_type: //select[@id='carriers_dhlint_content_type']
+                            dhl_calculate_handling_fee:: //select[@id='carriers_dhlint_handling_type']
+                            dhl_handling_applied: //select[@id='carriers_dhlint_handling_action']
+                            dhl_free_method: //select[@id='carriers_dhlint_free_method_doc']
+                            dhl_free_shipping_with_min_order_amount: //select[@id='carriers_dhlint_free_shipping_enable']
+                            dhl_ship_to_applicable_countries: //select[@id='carriers_dhlint_sallowspecific']
+                            dhl_show_method_if_not_applicable: //select[@id='carriers_dhlint_showmethod']
+                            dhl_debug: //select[@id='carriers_dhlint_debug']
                         multiselects:
-                            dhl_int_allowed_methods_doc: //select[@id='carriers_dhlint_doc_methods' and not(@disabled)]
-                            dhl_int_allowed_methods_nondoc: //select[@id='carriers_dhlint_nondoc_methods' and not(@disabled)]
-                            dhl_int_ship_to_specific_countries: //select[@id='carriers_dhlint_specificcountry']
+                            dhl_allowed_methods_doc: //select[@id='carriers_dhlint_doc_methods' and not(@disabled)]
+                            dhl_allowed_methods_nondoc: //select[@id='carriers_dhlint_nondoc_methods' and not(@disabled)]
+                            dhl_ship_to_specific_countries: //select[@id='carriers_dhlint_specificcountry']
