--- a/fixture/default/core/Mage/Home/uimap/frontend/AboutUs.yml
+++ b/fixture/default/core/Mage/Home/uimap/frontend/AboutUs.yml
@@ -41,3 +41,20 @@ about_us:
                           vote: //button[span='Vote']
                         radiobuttons:
                             vote: //li[span/label='%answer%']/input
+                -
+                   compare_products:
+                        xpath: //div[contains(div/strong/span,'Compare Products')]
+                        links:
+                          compare_clear_all: //a[text()='Clear All']
+                          compare_delete_product: //li[p='%productName%']/a
+                          compare_product_link: //ol[@id='compare-items']//a[text()='%productName%']
+                        buttons:
+                          compare: //button[@title='Compare']
+                        pageelements:
+                          compare_block_empty: //p[text()='You have no items to compare.']
+                          compare_block_title: //div[@class='block-title' and contains(. /strong/span, 'Compare Products')]
+        messages:
+            confirmation_for_removing_product_from_compare: Are you sure you would like to remove this item from the compare products?
+            confirmation_clear_all_from_compare: Are you sure you would like to remove all products from your comparison?
+            compare_list_cleared: //li[normalize-space(@class)='success-msg' and contains(.//span,'The comparison list was cleared.')]
+            product_removed_from_comparison: //li[normalize-space(@class)='success-msg' and contains(.//span,'The product %productName% has been removed from comparison list.')]
