[UIMAP] MAUTOSEL-409 - Fixed Newsletter tests to work for EE 1.12 and CE 1.6.2

--- a/fixture/default/core/Mage/Category/uimap/frontend/Category.yml
+++ b/fixture/default/core/Mage/Category/uimap/frontend/Category.yml
@@ -101,7 +101,7 @@ category_page_before_reindex:
                             vote: //li[span/label='%answer%']/input
                 -
                     newsletter:
-                        xpath: //div[@class='block block-subscribe']
+                        xpath: //div[contains(@class,'subscribe')]
                         buttons:
                             subscribe: //button[span='Subscribe']
                         fields:
