[UIMAP][HELPER][TESTS] MAUTOSEL-409 - Fixed Wishlist tests to work on EE 1.12 and CE 1.6.2

--- a/fixture/default/core/Mage/Product/uimap/frontend/Product.yml
+++ b/fixture/default/core/Mage/Product/uimap/frontend/Product.yml
@@ -40,7 +40,7 @@ product_page:
                             grouped_subproduct_qty: //table[@id='super-product-table']//tr[./td[text()='%subproductName%']]//input[@title='Qty']
                         links:
                             downloadable_sample: //dl[@class='item-options']/dd/a[normalize-space(text())='%samplesTitle%']
-                            add_to_wishlist: //div[@class='product-essential']//a[text()='Add to Wishlist']
+                            add_to_wishlist: //a[text()='Add to Wishlist']
                             add_to_compare: //a[text()='Add to Compare']
                             email_to_friend: //a[text()='Email to a Friend']
                             first_review: //a[text()='Be the first to review this product']
