[TESTS][HELPER][UIMAPS] Updated Helper, uimaps for review on ee. MAUTOSEL-414

--- a/fixture/default/core/Mage/Product/uimap/frontend/Product.yml
+++ b/fixture/default/core/Mage/Product/uimap/frontend/Product.yml
@@ -244,28 +244,30 @@ product_review:
     title: %productTitle%
     uimap: &productReview
         form:
-            <<: *productFieldsets
-            -
-                customer_reviews:
-                    xpath: //div[@id = 'customer-reviews']
-                    dropdowns:
-                        show_per_page: //div[@class='limiter']/select
-                    fields:
-                        nickname: //input[@id='nickname_field']
-                        summary_of_review: //input[@id='summary_field']
-                        review: //textarea[@id='review_field']
-                    links:
-                        review_summary: //dt[span='%reviewerName%']/a
-                    pageelements:
-                        review_details: //dt[span='%reviewerName%']/following-sibling::dd[1]
-                        review_rate_name: //dt[span='%reviewerName%']/following-sibling::dd[1]//th[text()='%rateName%']
-                        review_rate_value: //dt[span='%reviewerName%']/following-sibling::dd[1]//tr[th='%rateName%']//div[@class='rating']
-                        review_table_rate_name: //table[@id='product-review-table']//th[text()='%rateName%']
-                        review_reviwer_name: //span[text()='%reviewerName%']
-                    buttons:
-                        submit_review: //button[span='Submit Review']
-                    radiobuttons:
-                        select_rate: //input[@id='%rateName%_%rateId%']
+            fieldsets:
+                <<: *productFieldsets
+                -
+                    customer_reviews:
+                        xpath: //div[@id='customer-reviews']
+                        dropdowns:
+                            show_per_page: //div[@class='limiter']/select
+                        fields:
+                            nickname: //input[@id='nickname_field']
+                            summary_of_review: //input[@id='summary_field']
+                            review: //textarea[@id='review_field']
+                        links:
+                            review_summary: //dt[span='%reviewerName%']/a
+                        pageelements:
+                            review_details: //dt[span='%reviewerName%']/following-sibling::dd[1]
+                            review_rate_name: //dt[span='%reviewerName%']/following-sibling::dd[1]//th[text()='%rateName%']
+                            review_rate_value: //dt[span='%reviewerName%']/following-sibling::dd[1]//tr[th='%rateName%']//div[@class='rating']
+                            review_table_rate_name: //table[@id='product-review-table']//th[text()='%rateName%']
+                            review_reviwer_name: //span[text()='%reviewerName%']
+                            review_post_date: //dt[span='%reviewerName%']/following-sibling::dd[1]/small
+                        buttons:
+                            submit_review: //button[span='Submit Review']
+                        radiobuttons:
+                            select_rate: //input[@id='%rateName%_%rateId%']
         buttons:
             add_to_cart: //button[span='Add to Cart']
         messages: *productMessages
