--- a/fixture/default/core/Mage/ShoppingCartPriceRule/uimap/admin/ShoppingCartPriceRule.yml
+++ b/fixture/default/core/Mage/ShoppingCartPriceRule/uimap/admin/ShoppingCartPriceRule.yml
@@ -201,7 +201,7 @@ create_shopping_cart_price_rule:
         buttons:
             back: //button[span='Back']
             reset: //button[span='Reset']
-            save_rule: //button[span='Save Rule']
+            save_rule: //button[span='Save Rule' or span='Save']
             save_and_continue_edit: //button[span='Save and Continue Edit']
         messages: *ruleMessages
 
@@ -213,7 +213,7 @@ edit_shopping_cart_price_rule:
         buttons:
             back: //button[span='Back']
             reset: //button[span='Reset']
-            delete_rule: //button[span='Delete Rule']
-            save_rule: //button[span='Save Rule']
+            delete_rule: //button[span='Delete Rule' or span='Delete']
+            save_rule: //button[span='Save Rule' or span='Save']
             save_and_continue_edit: //button[span='Save and Continue Edit']
         messages: *ruleMessages
