--- a/fixture/enterprise/core/Mage/Checkout/uimap/frontend/MultipleAddressesCheckout.yml
+++ b/fixture/enterprise/core/Mage/Checkout/uimap/frontend/MultipleAddressesCheckout.yml
@@ -28,33 +28,63 @@
 # 'Checkout with Multiple Addresses' page
 checkout_multishipping_addresses:
     title: Ship to Multiple Addresses - Magento Enterprise Edition
+    uimap:
+        messages: &checkoutMessages
+            ship_method_unavailable: "//h2[text()='%addressHeader%']//following-sibling::div[1]//dt[text()='%shipService%']/following::dd[1]//li[strong='%shipService%: This shipping method is currently unavailable. If you would like to ship using this shipping method, please contact us.']"
 
 checkout_multishipping_addresses_post:
     title: Ship to Multiple Addresses - Magento Enterprise Edition
+    uimap:
+        messages: *checkoutMessages
 
 checkout_multishipping_new_shipping:
     title: Create Shipping Address - Magento Enterprise Edition
+    uimap:
+        messages: *checkoutMessages
 
 checkout_multishipping_shipping_methods:
     title: Shipping Methods - Magento Enterprise Edition
+    uimap:
+        form:
+            fieldsets:
+                -
+                    general_shipping_methods_form:
+                        xpath: //form[@id='shipping_method_form']/fieldset
+                        pageelements:
+                            shipping_methods_forms: /div[not(@class='buttons-set')]
+                            shipping_method_address_header: /div[not(@class='buttons-set')][%number%]/preceding-sibling::h2[1]
+                            shipping_method_address: /div[not(@class='buttons-set')][%number%]//address
+        messages: *checkoutMessages
 
 checkout_multishipping_edit_shipment_address:
     title: Edit Shipping Address - Magento Enterprise Edition
+    uimap:
+        messages: *checkoutMessages
 
 checkout_multishipping_payment_methods:
     title: Billing Information - Magento Enterprise Edition
+    uimap:
+        messages: *checkoutMessages
 
 checkout_multishipping_select_billing_address:
     title: Change Billing Address - Magento Enterprise Edition
+    uimap:
+        messages: *checkoutMessages
 
 checkout_multishipping_create_billing_address:
     title: Create Billing Address - Magento Enterprise Edition
+    uimap:
+        messages: *checkoutMessages
 
 checkout_multishipping_edit_billing_address:
     title: Edit Address - Magento Enterprise Edition
+    uimap:
+        messages: *checkoutMessages
 
 checkout_multishipping_review_order:
     title: Review Order - Magento Enterprise Edition
 
 checkout_multishipping_success_order:
     title: Magento Enterprise Edition
+    uimap:
+        messages: *checkoutMessages
